crates/ruff_linter/src/rules/ruff/snapshots/ruff_linter__rules__ruff__tests__preview__RUF071_RUF071.py.snap
---
source: crates/ruff_linter/src/rules/ruff/mod.rs
---
RUF071 [*] `os.path.commonprefix()` compares strings character-by-character
 --> RUF071.py:7:1
  |
6 | # Errors
7 | os.path.commonprefix(["/usr/lib", "/usr/local/lib"])
  | ^^^^^^^^^^^^^^^^^^^^
8 | commonprefix(["/usr/lib", "/usr/local/lib"])
9 | path.commonprefix(["/usr/lib", "/usr/local/lib"])
  |
help: Use `os.path.commonpath()` to compare path components
  |
2 ~ import os.path
3 | from os.path import commonprefix
…
6 | # Errors
7 ~ os.path.commonpath(["/usr/lib", "/usr/local/lib"])
  |
note: This is an unsafe fix and may change runtime behavior

RUF071 [*] `os.path.commonprefix()` compares strings character-by-character
 --> RUF071.py:8:1
  |
6 | # Errors
7 | os.path.commonprefix(["/usr/lib", "/usr/local/lib"])
8 | commonprefix(["/usr/lib", "/usr/local/lib"])
  | ^^^^^^^^^^^^
9 | path.commonprefix(["/usr/lib", "/usr/local/lib"])
  |
help: Use `os.path.commonpath()` to compare path components
  |
2 ~ import os.path
3 | from os.path import commonprefix
…
7 | os.path.commonprefix(["/usr/lib", "/usr/local/lib"])
8 ~ os.path.commonpath(["/usr/lib", "/usr/local/lib"])
  |
note: This is an unsafe fix and may change runtime behavior

RUF071 [*] `os.path.commonprefix()` compares strings character-by-character
  --> RUF071.py:9:1
   |
 7 | os.path.commonprefix(["/usr/lib", "/usr/local/lib"])
 8 | commonprefix(["/usr/lib", "/usr/local/lib"])
 9 | path.commonprefix(["/usr/lib", "/usr/local/lib"])
   | ^^^^^^^^^^^^^^^^^
10 |
11 | # OK
   |
help: Use `os.path.commonpath()` to compare path components
  |
2 ~ import os.path
3 | from os.path import commonprefix
…
8 | commonprefix(["/usr/lib", "/usr/local/lib"])
9 ~ os.path.commonpath(["/usr/lib", "/usr/local/lib"])
  |
note: This is an unsafe fix and may change runtime behavior
