crates/ruff_linter/src/rules/ruff/snapshots/ruff_linter__rules__ruff__tests__preview__RUF073_RUF073.py.snap
---
source: crates/ruff_linter/src/rules/ruff/mod.rs
---
RUF073 `%` operator used on an f-string
 --> RUF073.py:5:1
  |
5 | f"{banana}" % banana  # RUF073
  | ^^^^^^^^^^^^^^^^^^^^
  |

RUF073 `%` operator used on an f-string
 --> RUF073.py:6:1
  |
6 | f"hello %s" % "world"  # RUF073
  | ^^^^^^^^^^^^^^^^^^^^^
  |

RUF073 `%` operator used on an f-string
 --> RUF073.py:7:1
  |
7 | f"hello %s %s" % (1, 2)  # RUF073
  | ^^^^^^^^^^^^^^^^^^^^^^^
  |

RUF073 `%` operator used on an f-string
 --> RUF073.py:8:1
  |
8 | f"{name} %s" % "extra"  # RUF073
  | ^^^^^^^^^^^^^^^^^^^^^^
  |

RUF073 `%` operator used on an f-string
 --> RUF073.py:9:1
  |
9 | f"no placeholders" % banana  # RUF073
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |

RUF073 `%` operator used on an f-string
  --> RUF073.py:10:1
   |
10 | f"{'nested'} %s" % 42  # RUF073
   | ^^^^^^^^^^^^^^^^^^^^^
   |
