crates/ruff_linter/src/rules/ruff/snapshots/ruff_linter__rules__ruff__tests__preview__implicit-class-var-in-dataclass_RUF045.py.snap
---
source: crates/ruff_linter/src/rules/ruff/mod.rs
---
RUF045 Assignment without annotation found in dataclass body
  --> RUF045.py:8:5
   |
 6 | class C:
 7 |     # Errors
 8 |     no_annotation = r"foo"
   |     ^^^^^^^^^^^^^
 9 |     missing = MISSING
10 |     field = field()
   |
help: Use `ClassVar[...]`

RUF045 Assignment without annotation found in dataclass body
  --> RUF045.py:9:5
   |
 7 |     # Errors
 8 |     no_annotation = r"foo"
 9 |     missing = MISSING
   |     ^^^^^^^
10 |     field = field()
   |
help: Use `ClassVar[...]`

RUF045 Assignment without annotation found in dataclass body
  --> RUF045.py:10:5
   |
 8 |     no_annotation = r"foo"
 9 |     missing = MISSING
10 |     field = field()
   |     ^^^^^
11 |
12 |     # No errors
   |
help: Use `ClassVar[...]`
